# FessiT-FinanceSuite

./: .gitignore  EXPENSE_FIX_SUMMARY.md  INVOICE_FIX_SUMMARY.md  LICENSE  QUICK_START_TESTING.md  README.md  package-lock.json  package.json
finance-suite-professional-backend/: Cargo.toml  MULTI_ORG_LEDGER.md  fix_handler.ps1  readme
finance-suite-professional-backend/src/: db.rs  error.rs  main.rs
finance-suite-professional-backend/src/handlers/: account_handler.rs  asset_category_handler.rs  asset_handler.rs  category_handler.rs  challan_handler.rs  cost_center_handler.rs  customer_handler.rs  delivery_challan_handler.rs  employee_handler.rs  estimate_handler.rs  expense_handler.rs  general_expense_handler.rs  gst_challan_handler.rs  incoming_invoice_handler.rs  invoice_handler.rs  ledger_handler.rs  mod.rs  organisation_handler.rs  product_handler.rs  professional_tax_challan_handler.rs  purchase_order_handler.rs  report_handler.rs  salary_handler.rs  service_handler.rs  users.rs
finance-suite-professional-backend/src/models/: account.rs  address.rs  asset_category.rs  assets.rs  category.rs  challan.rs  costcenter.rs  customer.rs  delivery_challan.rs  employee.rs  estimate.rs  expense.rs  general_expense.rs  gst_challan.rs  incoming_invoice.rs  invoice.rs  ledger.rs  ledgerCounter.rs  mod.rs  organisation.rs  product.rs  professional_tax_challan.rs  purchase_order.rs  salary.rs  service.rs  users.rs
finance-suite-professional-backend/src/repository/: account_repository.rs  asset_category_repository.rs  asset_repository.rs  category_repository.rs  mod.rs  (+19 more)
(+193 files in other folders)
