[package]
name = "finance-suite-professional-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.4"
actix-cors = "0.7"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# MongoDB driver
mongodb = "2.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment variables
dotenv = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Validation
validator = { version = "0.16", features = ["derive"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Logging
env_logger = "0.11"
log = "0.4"

# Regex
regex = "1.10"
lazy_static = "1.4"
